Fix the spacing around some <h3> headers

--- a/src/root/static/css/hydra.css
+++ b/src/root/static/css/hydra.css
@@ -16,3 +16,7 @@ th {
 .template {
     display: none;
 }
+
+h3 {
+    margin-top: 1em;
+}
